# ethosai

./: .gitignore  404.html  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_feedback.yml  feature_request.yml
docs/: index.md
search/: search_index.json
services/api/: README.md  package.json  wrangler.toml
services/api/drizzle/: 0000_flaky_red_wolf.sql  0000_nervous_stark_industries.sql  0000_tan_wraith.sql  0001_black_stellaris.sql  0001_legal_scarlet_witch.sql  0001_tricky_wolfsbane.sql  0002_noisy_tomas.sql  0003_ordinary_joshua_kane.sql  0004_married_lake.sql  0005_small_shiver_man.sql  0006_glorious_red_hulk.sql  0007_funny_silver_fox.sql  0007_rich_tana_nile.sql  0008_violet_doomsday.sql
services/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  _journal.json
services/api/src/: index.ts  old.ts
services/api/src/core/: ai.ts  apiKey.ts  evaluation.ts  general.ts  process.ts  submission.ts
services/api/src/db/: migrate.ts  schema.ts
services/api/src/utils/: auth.ts  db.ts  embedding.ts  functions.ts  openai.ts
services/api/temp/: models.ts
services/app/: .env.example  .gitignore  app.vue  eslint.config.js  index.md  nuxt.config.ts  package-lock.json  package.json  uno.config.ts  wrangler.toml
services/app/components/: BarChart.vue  ChartCard.vue  DarkToggle.vue  DoughnutChart.vue  Footer.vue  Logos.vue  LottieAnimation.vue  ModelScoresGraph.vue  Sidebar.vue  SortIcon.vue
services/app/composables/: auth.ts  useDarkMode.ts
services/app/constants/: index.ts
services/app/content/blog/: ethos.md  hello.md
services/app/dummy/: a.vue  createconfigdummy.vue
services/app/layouts/: default.vue
services/app/pages/: index.vue
services/app/pages/auditqueue/: auditqueue.vue  index.vue
services/app/pages/blog/: [...all].vue
services/app/pages/createconfig/: createconfig.vue  index.vue
services/app/pages/dashboard/: dashboard.vue  index.vue
services/app/pages/demo/: index.vue
services/app/pages/ethos/: index.vue
services/app/pages/landing/: Background.vue  Blog.vue  Community.vue  FAQ.vue  Features.vue  Footer.vue  Framework.vue  GetStarted.vue  Hero.vue  Navbar.vue  Partnerships.vue  Social.vue  index.vue
services/app/pages/llmcomparison/: index.vue  llmcomparison.vue
services/app/pages/llmselector/: LlmCard.vue  LlmSelector.vue  index.vue
services/app/pages/login/: index.vue
services/app/pages/playground/: index.vue
services/app/public/: mock-config.json  mock-config2.json
services/experiments/: .gitignore  README.md  pyproject.toml
services/experiments/sample/: indian-geography.csv  science-facts.csv  world-history.csv
services/experiments/src/: __init__.py  env.example  main.py  qa.jsonl  score.py  test.py  textract.py
services/next/: bun.lockb  package.json
services/next/src/app/: page.tsx  (+1 more)
(+21 files in other folders)
