[project]
name = "openQA"
version = "0.1.0"
description = "Automate AI testing & ensure model trustworthiness"
authors = [
    { name = "Lulzx", email = "wiserishabh@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.4.2", "uv>=0.1.39" ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["packges/openQA"]
