[project]
name = "experiements"
version = "0.1.0"
description = "This is for testing out different experiemental apps"
authors = [
    { name = "Lulzx", email = "wiserishabh@gmail.com" }
]
dependencies = [
    "streamlit>=1.38.0",
    "pandas>=2.2.3",
    "openai>=1.50.0",
    "pymupdf>=1.24.10",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.10.0"
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/web"]
